# cmake_learning

./: .gitignore  CMakeLists.txt  README.md
include/: factorial.h  myMax.h  printer.h  robot.h
inp/: 2d_quads.msh  CMakeLists.txt
src/: CMakeLists.txt
src/array/: CMakeLists.txt  array.cpp
src/classes/: CMakeLists.txt  printer.cpp
src/easy/: CMakeLists.txt  easy.cpp
src/factorial/: CMakeLists.txt  factorial.cpp
src/multi/: CMakeLists.txt  CMakeLists.txt.sol  multi.cpp  realTime.cpp
src/templates/: CMakeLists.txt  robot.cpp
src/test/: CMakeLists.txt  regex.cpp
src/tuples/: CMakeLists.txt  tuple.cpp
test/: CMakeLists.txt  test.cpp
